--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <div class="profile">
           <img src="profile.jpg" alt="Profile Picture" />
           <div class="user-info">
-            <h2>chloe03</h2>
-            <p><i class="fas fa-map-marker-alt"></i> New York</p>
+            <h2>Username</h2>
           </div>
         </div>
         <i class="fas fa-cog settings-icon"></i>
@@ -31,21 +30,39 @@
 
       <div class="clothes-section">
         <div class="clothes-category">
-          <h3>All Clothes</h3>
           <div class="clothes-grid">
-            <div class="clothes-item"></div>
-            <div class="clothes-item"></div>
-            <div class="clothes-item"></div>
-            <div class="clothes-item"></div>
-          </div>
-        </div>
-        <div class="clothes-category">
-          <h3>Daily Closet</h3>
-          <div class="clothes-grid">
-            <div class="clothes-item"></div>
-            <div class="clothes-item"></div>
-            <div class="clothes-item"></div>
-            <div class="clothes-item"></div>
+            <div class="clothes-box">
+              <div class="clothes-item"></div>
+              <p>All Clothes</p>
+            </div>
+            <div class="clothes-box">
+              <div class="clothes-item"></div>
+              <p>Shirts</p>
+            </div>
+            <div class="clothes-box">
+              <div class="clothes-item"></div>
+              <p>Pants</p>
+            </div>
+            <div class="clothes-box">
+              <div class="clothes-item"></div>
+              <p>Jackets</p>
+            </div>
+            <div class="clothes-box">
+              <div class="clothes-item"></div>
+              <p>Shoes</p>
+            </div>
+            <div class="clothes-box">
+              <div class="clothes-item"></div>
+              <p>Dresses</p>
+            </div>
+            <div class="clothes-box">
+              <div class="clothes-item"></div>
+              <p>Kurta Sets</p>
+            </div>
+            <div class="clothes-box">
+              <div class="clothes-item"></div>
+              <p>Sarees</p>
+            </div>
           </div>
         </div>
       </div>
