--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
     <div class="app-container">
       <header>
         <div class="profile">
-          <img src="profile.jpg" alt="Profile Picture" />
+          <img
+            src="https://i.pinimg.com/474x/db/3a/62/db3a623acc8396fb285ec899ad01cd10.jpg"
+            alt="Profile Picture"
+          />
           <div class="user-info">
-            <h2>Username</h2>
+            <h2>HelloWorld</h2>
           </div>
         </div>
         <i class="fas fa-cog settings-icon"></i>
@@ -32,36 +35,68 @@
         <div class="clothes-category">
           <div class="clothes-grid">
             <div class="clothes-box">
-              <div class="clothes-item"></div>
+              <div class="clothes-item">
+                <img
+                  src="https://i.pinimg.com/736x/87/51/92/875192a684a77e919a7061d23d6fcc8f.jpg"
+                />
+              </div>
               <p>All Clothes</p>
             </div>
             <div class="clothes-box">
-              <div class="clothes-item"></div>
+              <div class="clothes-item">
+                <img
+                  src="https://i.pinimg.com/736x/85/79/fc/8579fcaa933d04479bfa6ddfabe89768.jpg"
+                />
+              </div>
               <p>Shirts</p>
             </div>
             <div class="clothes-box">
-              <div class="clothes-item"></div>
+              <div class="clothes-item">
+                <img
+                  src="https://i.pinimg.com/736x/77/fd/77/77fd77816ff1d4eaaadd8fcc34b96991.jpg"
+                />
+              </div>
               <p>Pants</p>
             </div>
             <div class="clothes-box">
-              <div class="clothes-item"></div>
+              <div class="clothes-item">
+                <img
+                  src="https://i.pinimg.com/736x/66/31/37/6631370f3e1c15f9027246fb0b155e3a.jpg"
+                />
+              </div>
               <p>Jackets</p>
             </div>
             <div class="clothes-box">
-              <div class="clothes-item"></div>
+              <div class="clothes-item">
+                <img
+                  src="https://i.pinimg.com/474x/db/4c/5b/db4c5b33ad76fd02046e9ec2329f5257.jpg"
+                />
+              </div>
               <p>Shoes</p>
             </div>
             <div class="clothes-box">
-              <div class="clothes-item"></div>
+              <div class="clothes-item">
+                <img
+                  src="https://i.pinimg.com/736x/4b/b2/e5/4bb2e5b66aa58c7a9f3dceffd871db1d.jpg"
+                />
+              </div>
               <p>Dresses</p>
             </div>
             <div class="clothes-box">
-              <div class="clothes-item"></div>
-              <p>Kurta Sets</p>
+              <div class="clothes-item">
+                <img
+                  src="https://i.pinimg.com/736x/af/cb/03/afcb03c6fb796ab4efb1cf2ca0e920ed.jpg"
+                />
+              </div>
+              <p>Ethnic</p>
             </div>
             <div class="clothes-box">
-              <div class="clothes-item"></div>
-              <p>Sarees</p>
+              <div class="clothes-item">
+                <img
+                  src="https://i.pinimg.com/474x/83/49/ad/8349ad1d0508ba036b0d91289b8b3bb6.jpg"
+                />
+              </div>
+              <p>Skirts</p>
             </div>
           </div>
         </div>
