--- a/index.html
+++ b/index.html
@@ -36,25 +36,28 @@
           <div class="clothes-grid">
             <div class="clothes-box">
               <div class="clothes-item">
-                <img
-                  src="https://i.pinimg.com/736x/87/51/92/875192a684a77e919a7061d23d6fcc8f.jpg"
-                />
+                <a href="all.html"
+                  ><img
+                    src="https://i.pinimg.com/736x/87/51/92/875192a684a77e919a7061d23d6fcc8f.jpg"
+                /></a>
               </div>
               <p>All Clothes</p>
             </div>
             <div class="clothes-box">
               <div class="clothes-item">
-                <img
-                  src="https://i.pinimg.com/736x/85/79/fc/8579fcaa933d04479bfa6ddfabe89768.jpg"
-                />
+                <a href="shirts.html"
+                  ><img
+                    src="https://i.pinimg.com/736x/85/79/fc/8579fcaa933d04479bfa6ddfabe89768.jpg"
+                /></a>
               </div>
               <p>Shirts</p>
             </div>
             <div class="clothes-box">
               <div class="clothes-item">
-                <img
-                  src="https://i.pinimg.com/736x/77/fd/77/77fd77816ff1d4eaaadd8fcc34b96991.jpg"
-                />
+                <a href="pants.html"
+                  ><img
+                    src="https://i.pinimg.com/736x/77/fd/77/77fd77816ff1d4eaaadd8fcc34b96991.jpg"
+                /></a>
               </div>
               <p>Pants</p>
             </div>
