--- a/shirts.html
+++ b/shirts.html
@@ -3,7 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Shirts</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="shirts-container">
+      <div class="Header">
+        <button class="back-button" onclick="window.location.href='index.html'">
+          &lt; Back
+        </button>
+      </div>
+
+      <!-- Page Heading -->
+      <h1>Shirts</h1>
+
+      <!-- shirts Grid -->
+      <div class="shirts-grid">
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
+      </div>
+    </div>
+  </body>
 </html>
