--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Closet App</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+</head>
     <script
       src="https://kit.fontawesome.com/a076d05399.js"
       crossorigin="anonymous"
@@ -106,9 +108,9 @@
       </div>
 
       <footer>
-        <i class="fas fa-user-circle"></i>
-        <button class="add-button">+</button>
-        <i class="fas fa-th-large"></i>
+        <button class="nav-btn"><i class="fa-solid fa-shirt"></i></button> <!-- Dress Icon -->
+        <button class="nav-btn add-btn"><i class="fa-solid fa-plus"></i></button> <!-- Plus Icon -->
+        <button class="nav-btn"><i class="fa-solid fa-basket-shopping"></i></button> <!-- Basket Icon -->
       </footer>
     </div>
   </body>
