--- a/all.html
+++ b/all.html
@@ -5,28 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>All Clothes</title>
     <link rel="stylesheet" href="styles.css" />
+    <script defer src="all.js"></script>
+    <!-- Make sure script.js is linked -->
   </head>
   <body>
     <div class="all-clothes-container">
-      <div class="Header">
+      <!-- Header -->
+      <div class="header">
         <button class="back-button" onclick="window.location.href='index.html'">
           &lt; Back
         </button>
+        <h1>All Clothes</h1>
       </div>
 
-      <!-- Page Heading -->
-      <h1>All Clothes</h1>
-
       <!-- Clothes Grid -->
-      <div class="allclothes-grid">
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
+      <div class="clothes-grid">
+        <div class="item">
+          <img src="shirt1.jpg" alt="Shirt 1" />
+          <button class="heart-button">♡</button>
+        </div>
+        <div class="item">
+          <img src="shirt2.jpg" alt="Shirt 2" />
+          <button class="heart-button">♡</button>
+        </div>
+        <div class="item">
+          <img src="shirt3.jpg" alt="Shirt 3" />
+          <button class="heart-button">♡</button>
+        </div>
+        <div class="item">
+          <img src="shirt4.jpg" alt="Shirt 4" />
+          <button class="heart-button">♡</button>
+        </div>
+        <div class="item">
+          <img src="shirt5.jpg" alt="Shirt 5" />
+          <button class="heart-button">♡</button>
+        </div>
+        <div class="item">
+          <img src="shirt6.jpg" alt="Shirt 6" />
+          <button class="heart-button">♡</button>
+        </div>
       </div>
     </div>
   </body>
