boilerplate and icons

--- a/camera.html
+++ b/camera.html
@@ -19,7 +19,12 @@
     </style>
   </head>
   <body>
-    <h1>Webcam Capture</h1>
+    <div class="header">
+      <button class="back-button" onclick="window.location.href='index.html'">
+        &lt; Back
+      </button>
+      <h1>Webcam Capture</h1>
+    </div>
     <video id="videoElement" autoplay></video>
     <button id="captureButton">Capture Photo</button>
     <button id="uploadButton" disabled>Upload (Non-Functional)</button>
