--- a/signup.html
+++ b/signup.html
@@ -84,8 +84,8 @@
           }
 
           // Simulate successful signup (replace with actual backend logic)
-          alert("Signup successful! Redirecting to your closet...");
-          window.location.href = "index.html";
+          alert("Signup successful! Moving on...");
+          window.location.href = "skin.html";
         });
     </script>
   </body>
