--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
       </div>
 
       <footer>
-        <button class="nav-btn"><i class="fa-solid fa-shirt"></i></button> <!-- Dress Icon -->
+        <button class="nav-btn" onclick="window.location.href='create-outfit.html'">
+        <i class="fa-solid fa-shirt"></i></button> <!-- Dress Icon -->
         <!-- Home Page HTML -->
         <button class="nav-btn" onclick="window.location.href='ai-recommendations.html'">
           <i class="fa-solid fa-brain"></i>
