--- a/laundry.html
+++ b/laundry.html
@@ -3,14 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Laundry</title>
+    <title>Laundry Status</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="header">
       <button class="back-button" onclick="window.location.href='index.html'">
         &lt; Back
       </button>
-      <h1>Laundry</h1>
+      <h1>Laundry Status</h1>
+    </div>
+    <div class="laundry-container">
+      <img
+        src="https://i.pinimg.com/736x/18/20/e8/1820e865edd6ca0dcbfcd4d9721b6f58.jpg"
+        alt="Laundry Basket"
+        class="laundry-image"
+      />
+      <p class="laundry-text">Nothing Pending !!</p>
     </div>
   </body>
 </html>
