--- a/camera.html
+++ b/camera.html
@@ -24,7 +24,7 @@
       <button class="back-button" onclick="window.location.href='index.html'">
         &lt; Back
       </button>
-      <h1>Capture Cloth</h1>
+      <h1>All Clothes</h1>
     </div>
     <video id="videoElement" autoplay></video>
     <button id="captureButton">Capture Photo</button>
