shirt,pant,like button

--- a/pants.html
+++ b/pants.html
@@ -19,14 +19,42 @@
 
       <!-- pants Grid -->
       <div class="pants-grid">
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
+        <div class="item">
+          <img
+            src="https://i.pinimg.com/736x/d3/99/06/d39906f074e7a6a41a7293a4d7aee9a1.jpg"
+          />
+          <button class="heart-button">♡</button>
+        </div>
+        <div class="item">
+          <img
+            src="https://i.pinimg.com/736x/57/38/1a/57381adbe72fd832564110b06ea428ba.jpg"
+          />
+          <button class="heart-button">♡</button>
+        </div>
+        <div class="item">
+          <img
+            src="https://i.pinimg.com/736x/54/7c/a9/547ca9c6a386b60134432aee3d43bbdf.jpg"
+          />
+          <button class="heart-button">♡</button>
+        </div>
+        <div class="item">
+          <img
+            src="https://i.pinimg.com/736x/6f/47/58/6f47587b22608777260f5067123e6faf.jpg"
+          />
+          <button class="heart-button">♡</button>
+        </div>
+        <div class="item">
+          <img
+            src="https://i.pinimg.com/736x/d3/99/06/d39906f074e7a6a41a7293a4d7aee9a1.jpg"
+          />
+          <button class="heart-button">♡</button>
+        </div>
+        <div class="item">
+          <img
+            src="https://i.pinimg.com/474x/49/a1/57/49a15757c04016120db13849a12957a7.jpg"
+          />
+          <button class="heart-button">♡</button>
+        </div>
       </div>
     </div>
   </body>
