--- a/shirts.html
+++ b/shirts.html
@@ -19,14 +19,42 @@
 
       <!-- shirts Grid -->
       <div class="shirts-grid">
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
+        <div class="item">
+          <img
+            src="https://i.pinimg.com/474x/cf/32/ff/cf32ffd4c68284d1de7162ed0ec85282.jpg"
+          />
+          <button class="heart-button">♡</button>
+        </div>
+        <div class="item">
+          <img
+            src="https://i.pinimg.com/474x/cf/95/5d/cf955d6563d68f9692af7a5d7eabbbf9.jpg"
+          />
+          <button class="heart-button">♡</button>
+        </div>
+        <div class="item">
+          <img
+            src="https://i.pinimg.com/736x/d2/dc/60/d2dc60b4f107c29b2ce7727c796acbbc.jpg"
+          />
+          <button class="heart-button">♡</button>
+        </div>
+        <div class="item">
+          <img
+            src="https://i.pinimg.com/736x/76/b9/72/76b972beb1713edde32d6dd99f49f4ab.jpg"
+          />
+          <button class="heart-button">♡</button>
+        </div>
+        <div class="item">
+          <img
+            src="https://i.pinimg.com/736x/61/b7/44/61b744947ab43b08c10d65ef1ccbc732.jpg"
+          />
+          <button class="heart-button">♡</button>
+        </div>
+        <div class="item">
+          <img
+            src="https://i.pinimg.com/736x/9b/b2/23/9bb223088218df6c49b9f805baf3e3fa.jpg"
+          />
+          <button class="heart-button">♡</button>
+        </div>
       </div>
     </div>
   </body>
