settings, create outfit

--- a/create-outfit.html
+++ b/create-outfit.html
@@ -3,14 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Outfits</title>
+    <title>Create Outfit</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="header">
-      <button class="back-button" onclick="window.location.href='index.html'">
-        &lt; Back
-      </button>
-      <h1>Create Outfit</h1>
+    <button class="back-button" onclick="history.back()">← Back</button>
+
+    <div class="outfit-container">
+      <div class="box">
+        <img
+          src="https://i.pinimg.com/474x/fa/1f/c4/fa1fc46e95a93d87da2fa6b032786ce8.jpg"
+          alt=""
+        />
+      </div>
+      <span class="symbol">+</span>
+
+      <div class="box">
+        <img
+          src="https://i.pinimg.com/736x/7e/d5/91/7ed5911a7d7f1de6924abcd46b25bee6.jpg"
+          alt=""
+        />
+      </div>
+      <span class="symbol">=</span>
+      <div class="box">
+        <img
+          src="https://i.pinimg.com/474x/c2/64/04/c26404384e466e22b844821eef5402fd.jpg"
+          alt=""
+        />
+      </div>
     </div>
   </body>
 </html>
