--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
             </div>
             <div class="clothes-box">
               <div class="clothes-item">
-                <img
+                <a href="jackets.html"><img
                   src="https://i.pinimg.com/736x/66/31/37/6631370f3e1c15f9027246fb0b155e3a.jpg"
-                />
+                /></a>
               </div>
               <p>Jackets</p>
             </div>
