--- a/jackets.html
+++ b/jackets.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shirts</title>
     <link rel="stylesheet" href="styles.css" />
+    <script defer src="jackets.js"></script>
   </head>
   <body>
     <div class="shirts-container">
@@ -20,27 +21,39 @@
       <!-- shirts Grid -->
       <div class="shirts-grid">
         <div class="item">
-          <img src="" />
+          <img
+            src="https://i.pinimg.com/736x/d0/86/8d/d0868dc45161613e4a9e17c5eb7c12e0.jpg"
+          />
           <button class="heart-button">♡</button>
         </div>
         <div class="item">
-          <img src="" />
+          <img
+            src="https://i.pinimg.com/736x/d4/31/53/d43153869789f9553921ab909be4f11b.jpg"
+          />
           <button class="heart-button">♡</button>
         </div>
         <div class="item">
-          <img src="" />
+          <img
+            src="https://i.pinimg.com/736x/67/e0/ef/67e0ef9c427f7dd848774287b1a48b4b.jpg"
+          />
           <button class="heart-button">♡</button>
         </div>
         <div class="item">
-          <img src="" />
+          <img
+            src="https://i.pinimg.com/736x/69/68/17/69681780eb93081d4c88123cd08c9751.jpg"
+          />
           <button class="heart-button">♡</button>
         </div>
         <div class="item">
-          <img src="" />
+          <img
+            src="https://i.pinimg.com/736x/33/2d/b5/332db5d97e4c13a4b9dee3868f6c6687.jpg"
+          />
           <button class="heart-button">♡</button>
         </div>
         <div class="item">
-          <img src="" />
+          <img
+            src="https://i.pinimg.com/736x/ee/8e/df/ee8edfe7a2669dfafdb299c08d0a3abd.jpg"
+          />
           <button class="heart-button">♡</button>
         </div>
       </div>
