--- a/all.html
+++ b/all.html
@@ -6,11 +6,9 @@
     <title>All Clothes</title>
     <link rel="stylesheet" href="styles.css" />
     <script defer src="all.js"></script>
-    <!-- Make sure script.js is linked -->
   </head>
   <body>
     <div class="all-clothes-container">
-      <!-- Header -->
       <div class="header">
         <button class="back-button" onclick="window.location.href='index.html'">
           &lt; Back
@@ -18,30 +16,47 @@
         <h1>All Clothes</h1>
       </div>
 
-      <!-- Clothes Grid -->
       <div class="clothes-grid">
         <div class="item">
-          <img src="shirt1.jpg" alt="Shirt 1" />
+          <img
+            src="https://i.pinimg.com/474x/cf/32/ff/cf32ffd4c68284d1de7162ed0ec85282.jpg"
+            alt="Shirt 1"
+          />
           <button class="heart-button">♡</button>
         </div>
         <div class="item">
-          <img src="shirt2.jpg" alt="Shirt 2" />
+          <img
+            src="https://i.pinimg.com/736x/57/38/1a/57381adbe72fd832564110b06ea428ba.jpg"
+            alt="Shirt 2"
+          />
           <button class="heart-button">♡</button>
         </div>
         <div class="item">
-          <img src="shirt3.jpg" alt="Shirt 3" />
+          <img
+            src="https://i.pinimg.com/736x/76/b9/72/76b972beb1713edde32d6dd99f49f4ab.jpg"
+            alt="Shirt 3"
+          />
           <button class="heart-button">♡</button>
         </div>
         <div class="item">
-          <img src="shirt4.jpg" alt="Shirt 4" />
+          <img
+            src="https://i.pinimg.com/736x/54/7c/a9/547ca9c6a386b60134432aee3d43bbdf.jpg"
+            alt="Shirt 4"
+          />
           <button class="heart-button">♡</button>
         </div>
         <div class="item">
-          <img src="shirt5.jpg" alt="Shirt 5" />
+          <img
+            src="https://i.pinimg.com/736x/d0/86/8d/d0868dc45161613e4a9e17c5eb7c12e0.jpg"
+            alt="Shirt 5"
+          />
           <button class="heart-button">♡</button>
         </div>
         <div class="item">
-          <img src="shirt6.jpg" alt="Shirt 6" />
+          <img
+            src="https://i.pinimg.com/736x/ee/8e/df/ee8edfe7a2669dfafdb299c08d0a3abd.jpg"
+            alt="Shirt 6"
+          />
           <button class="heart-button">♡</button>
         </div>
       </div>
