--- a/shirts.html
+++ b/shirts.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shirts</title>
     <link rel="stylesheet" href="styles.css" />
+    <script defer src="shirts.js"></script>
   </head>
   <body>
     <div class="shirts-container">
