--- a/ai-recommendations.html
+++ b/ai-recommendations.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Recommendations</title>
+    <link rel="stylesheet" href="aistyles.css" />
+    <!-- Link to CSS -->
   </head>
   <body>
     <div class="header">
@@ -12,5 +14,14 @@
       </button>
       <h1>AI Recommendations</h1>
     </div>
+
+    <!-- Wrapped everything inside the dialogue box -->
+    <div class="dialogue-box">
+      <p id="weather">Fetching weather...</p>
+      <p id="recommendation"></p>
+    </div>
+
+    <script src="airenderer.js"></script>
+    <!-- Link to JS -->
   </body>
 </html>
